# ThemeParkSim

./: CMakeLists.txt  Camera.cpp  Camera.h  Duck.h  Model.h  ModelMesh.h  ThemeParkSim.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
resources/models/Dart/: DartEyeTex.tif
resources/models/bathtub/: water.mtl
resources/models/dragon/: DragonModel.mtl
resources/models/duck/: Duck.mtl
resources/models/duck/fishingDucks/: environment.mtl
resources/models/duck/lowPolyDuck/: LowPolyDuck.mtl
resources/models/duckHook/: fishingRod.mtl
resources/models/duckPool/: scene.mtl
resources/models/ducksPool/: environment.mtl
resources/models/pool/: pool.mtl
resources/shaders/: default.frag  modelShader.vert  skyBox.frag  skyBox.vert
